src/components/blog/styles.module.css
/* Blog Section */
.blog-section {
    text-align: center;
    padding: 80px 0;
  }
  
  .blog-grid {
    display: grid !important;
    grid-template-columns: 1fr !important;
    gap: 2rem;
    margin-top: 2rem;
  }
  
  .blog-card {
    background: var(--color-primary);
    background-image: linear-gradient(180deg, var(--color-primary) 25%, var(--color-secondary) 130%);
    box-shadow: 1px 1px 60px var(--color-gray);
    border-radius: 10px;
    padding: 2rem;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
  }

  .blog-image {
    max-height: 200px;
    width: auto;
    flex: 1;
  }
  
  .blog-content {
    font-size: 1.4rem;
    color: var(--color-white);
    flex: 2;
  }
  
  .blog-title {
    font-size: 1.6rem;
    padding: 2rem 0.5rem;
  }
  
  .blog-buttons button {
    font-size: 1.2rem !important;
    box-sizing: border-box;
    min-width: 160px;
    width: 20% !important;
    display: inline-block;
    margin: 2%;
  }
  
  .blog-brackets {
    color: var(--color-dark);
    transition: all 1s ease-out;
  }
  
  button:hover .blog-brackets {
    color: var(--color-white) !important;
    padding: 0 2px !important;
    transition: padding 2s !important;
  }
  
  /* Estilos para tablets y desktop */
  @media (min-width: 768px) {
    .blog-card {
      flex-direction: row;
      align-items: center;
    }
  
    .blog-image {
      max-height: none;
      width: 50%;
      margin-bottom: 0;
    }
  
    .blog-content {
      flex: 3;
      padding-left: 20px;
    }
  }

/* Post Detail Styles */
.post-section {
  margin-top: 60px;
  margin-bottom: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: var(--color-dark);
}

.post-card {
  width: 90%;
  max-width: 1200px;
  padding: 20px;
  background: var(--color-primary);
  background-image: linear-gradient(180deg, var(--color-primary) 25%, var(--color-dark) 130%);
  box-shadow: 1px 1px 60px var(--color-gray);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.post-image {
  max-width: 100%;
  max-height: 600px;
  width: auto;
  height: auto;
  margin-top: 20px;
  border-radius: 10px;
}

.post-title {
  font-weight: bold;
  margin-top: 3rem;
}

.post-content {
  font-size: 1.7rem;
  color: var(--color-white);
  margin-top: 2rem;
  column-count: 2; /* Distribuir contenido en dos columnas */
  column-gap: 2rem; /* Espacio entre columnas */
  padding: 2rem;
}

/* Estilos para viewports más pequeños (hasta 768px) */
@media (max-width: 768px) {
  .post-content {
    column-count: 1; /* Mostrar contenido en una sola columna */
  }
}
  

